bundle/tests/scorecard/minikube-kuttl/ingress-certificate/01-rc-with-cert.yaml
apiVersion: rc.app.stacks/v1beta2
kind: RuntimeComponent
metadata:
  name: ingress-with-cert-rc
spec:
  # Add fields here
  applicationImage: 'k8s.gcr.io/pause:2.0'
  replicas: 1
  securityContext:
    runAsUser: 1000720001
  expose: true
  route:
    host: myapp.mycompany.com
    path: "/"
    pathType: Prefix
    certificateSecretRef: ingress-tls-secret
    termination: reencrypt
