bundle/tests/scorecard/minikube-kuttl/ingress-certificate/02-delete-route.yaml
apiVersion: rc.app.stacks/v1beta2
kind: RuntimeComponent
metadata:
  name: ingress-with-cert-rc
spec:
  # Add fields here
  applicationImage: k8s.gcr.io/pause:2.0
  replicas: 1
  expose: false
