bundle/tests/scorecard/minikube-kuttl/ingress-certificate/03-delete-secret.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: rc.app.stacks/v1
  kind: RuntimeComponent
- apiVersion: v1
  kind: Secret
  name: ingress-tls-secret
