bundle/tests/scorecard/minikube-kuttl/ingress-certificate/02-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-with-cert-rc
status:
  replicas: 1
  readyReplicas: 1
  updatedReplicas: 1
