bundle/tests/scorecard/minikube-kuttl/ingress-certificate/02-errors.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ingress-with-cert-rc
spec:
  tls:
    - hosts:
        - myapp.mycompany.com
      secretName: ingress-tls-secret
  rules:
    - host: myapp.mycompany.com
      http:
        paths:
          - path: /
            pathType: Prefix
